<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reverse Recipe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search">Search Recipes</string>
    <string name="search_recipes">Search Recipes</string>
    <string name="title_activity_display_recipe">View Recipe</string>
    <string name="display_recipe">Recipe</string>
    <string name="title_activity_ingredient_search">Search Ingredients</string>
    <string name="search_ingredients">Search Ingredients</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="method_label">Method</string>
    <string name="add_ingredient">Add</string>
    <string name="title_activity_my_pantry">My Pantry</string>
    <string name="my_pantry">My Pantry</string>
    <string name="difficulty">Difficulty</string>
    <string name="rating">Rating</string>
    <string name="cooktime">Cook Time</string>
    <string name="filter_results">Filter</string>
    <string name="asc">Ascending</string>
    <string name="desc">Descending</string>
    <string name="sort_results">Sort</string>
    <string name="from_pantry">+</string>
    <string name="most_used">Most Used</string>
    <string name="from_most_used">-</string>
    <string name="preference_file_key">Saved Pantry</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="add_ingredient_hint">Add an Ingredient</string>
    <string name="main_test">Main Test</string>
    <string name="cookbook">Cook Book</string>
    <string name="analytics">Analytics</string>
    <string name="blankstring"></string>
    <string name="home">Home</string>
    <string name="shoppinglist">Shopping List</string>
    <string name="ingredientsgraph">Favourite Ingredient</string>
    <string name="ok">OK</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="saveCookBook">Save To Cook Book</string>
    <string name="cookBookRecipe">Recipe</string>
    <string name="deleteRecipe">Delete</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="startTimer">Start Timer</string>
    <string name="minutes">Minutes</string>
    <string name="send_email">Send Recipe: Email</string>
    <string name="step1">Step 1: Add Ingredient</string>
    <string name="step2">Step 2: Search Recipes</string>
    <string name="step3">Step 3: View Results</string>
    <string name="splash_image">Splash Tutorial Image</string>
    <string name="splash_donotdisplay">Display This Screen On App Start</string>
    <string name="display_splash">Display Splash</string>
    
</resources>
