<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_overflow"
        android:icon="@drawable/overflow_icon"
        android:showAsAction="always"
        android:title="@string/blankstring">
        <menu>
            <item
                android:id="@+id/action_home"
                android:showAsAction="never"
                android:title="@string/home"/>
            <item
                android:id="@+id/action_cookbook"
                android:showAsAction="never"
                android:title="@string/cookbook"/>
            <item
                android:id="@+id/action_analytics"
                android:showAsAction="never"
                android:title="@string/analytics"/>
            <item
                android:id="@+id/action_shopping_list"
                android:showAsAction="never"
                android:title="@string/shoppinglist"/>
        </menu>
    </item>

</menu>