<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/searchRecipesButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:onClick="GoToSearchRecipes"
        android:text="@string/search_recipes" />

    <Button
        android:id="@+id/displayRecipeButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/searchRecipesButton"
        android:layout_below="@+id/searchRecipesButton"
        android:layout_marginTop="20dp"
        android:onClick="GoToDisplayRecipe"
        android:text="@string/display_recipe" />
    
    <Button
        android:id="@+id/searchIngredientsButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/searchRecipesButton"
        android:layout_below="@+id/displayRecipeButton"
        android:layout_marginTop="20dp"
        android:onClick="GoToSearchIngredients"
        android:text="@string/search_ingredients" />
    
    <Button
        android:id="@+id/myPantryButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/searchRecipesButton"
        android:layout_below="@+id/searchIngredientsButton"
        android:layout_marginTop="20dp"
        android:onClick="GoToMyPantry"
        android:text="@string/my_pantry" />

</RelativeLayout>