<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MyPantryActivity" >
    
    <AutoCompleteTextView
		android:id="@+id/ingredientsSearch"
		android:layout_width="220dp"
       	android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:hint="Add an Ingredient"/>
    
    <Button
		android:id="@+id/addIngredientButton"
	    android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
	    android:text="@string/add_ingredient"
	    android:layout_toRightOf="@+id/ingredientsSearch" />
    
    <TextView
       android:id="@android:id/empty"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/ingredientsSearch"
       android:gravity="center_horizontal"/>
    
    <ListView
        android:id="@+id/ingredientList"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:layout_below="@+id/ingredientsSearch"
	    android:layout_above="@+id/deleteButton"
	    android:choiceMode="multipleChoice" >
	</ListView>
    
    <Button
        android:id="@+id/deleteButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/delete" />
    
    <Button
        android:id="@+id/searchButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/search_recipes"
        android:onClick="GoToSearchRecipes"
    	android:layout_toRightOf="@+id/deleteButton" />
    
</RelativeLayout>
