<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".IngredientSearchActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    	
	    <AutoCompleteTextView
	        android:id="@+id/ingredientsSearch"
	        android:layout_width="0dp"
	        android:layout_height="40dp"
	        android:layout_weight="6"
	        android:hint="@string/add_ingredient_hint" />
	    
	    <Button
	        android:id="@+id/addIngredientButton"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="2"
	        android:text="@string/add_ingredient"
	        android:background="@drawable/red_button" 
            style="@style/ButtonText" />
	    
	    <ImageButton
	        android:id="@+id/fromPantryButton"
	        android:layout_width="0dp"
	        android:layout_height="40dp"
	        android:paddingTop="8dp"
	        android:layout_weight="1"
	        android:background="@null"
	        android:src="@drawable/shoppingcart32"  />
	    
	    <ImageButton
	        android:id="@+id/fromMostUsedButton"
	        android:layout_width="0dp"
	        android:layout_height="40dp"
	        android:paddingTop="8dp"
	        android:layout_weight="1"
	        android:background="@null"
	        android:src="@drawable/star32" />
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">   

        <ListView
            android:id="@+id/ingredientList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </ListView>
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/bottomSearchBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/clearButton"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:text="@string/clear"
            android:background="@drawable/black_button" 
            style="@style/ButtonText" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/search_recipes"
            android:background="@drawable/red_button" 
            style="@style/ButtonText"  />
    </LinearLayout>
    
</LinearLayout>